<resources>
    <string name="app_name">Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_card">Add to cart</string>
    <string name="decrease_quantity">-</string>
    <string name="increase_quantity">+</string>
    <string name="products_total">Products total:</string>
    <string name="service_fee">Service fee:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="quantity">Quantity:</string>
    <string name="price_per_unit">Price per unit:</string>
    <string name="pay_now">Pay now</string>
</resources>